added favicon & backend

--- a/templates/about.html
+++ b/templates/about.html
@@ -6,6 +6,7 @@
     <title>Про клініку — Стоматологічна клініка Щолокових</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/about.css') }}">
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='logo.png') }}">
 </head>
 <body>
     <header class="site-header">
@@ -87,9 +88,9 @@
             </div>
             <div class="footer-col">
                 <h4>Контакти</h4>
-                <p><a href="tel:+380671234567">+38 (067) 777-77-77</a></p>
-                <p><a href="mailto:info@example.com">info@example.com</a></p>
-                <p>м. Полтава, вул. Прикладна, 10</p>
+                <p><a href="tel:+380800331992">+38 (0 800) 33 1992</a></p>
+                <p><a href="mailto:solokovanatalia@gmail.com">solokovanatalia@gmail.com</a></p>
+                <p>м. Київ Оболонська набережна 3, корпус 3</p>
             </div>
         </div>
         <div class="footer-bottom">
