--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Стоматологічна клініка Щолокових</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='logo.png') }}">
 </head>
 <body>
     <header class="site-header">
@@ -167,8 +168,8 @@
             <div class="contact-grid">
                 <div>
                     <h2>Контакти та запис</h2>
-                    <p class="lead">м. Полтава, вул. Прикладна, 10 • Пн–Сб 09:00–19:00</p>
-                    <p class="phone"><a href="tel:+380671234567">+38 (067) 777-77-77</a></p>
+                    <p class="lead">м. Київ Оболонська набережна 3, корпус 3 • Пн–Сб 09:00–19:00</p>
+                    <p class="phone"><a href="tel:+380800331992">+38 (0 800) 33 1992</a></p>
                     <div class="contact-buttons">
                         <a href="#" class="btn btn-primary zapisbtn">Записатися онлайн</a>
                         <a href="https://t.me/scholokovsdent" class="btn btn-ghost">Написати в Telegram</a>
@@ -222,9 +223,9 @@
             </div>
             <div class="footer-col">
                 <h4>Контакти</h4>
-                <p><a href="tel:+380671234567">+38 (067) 777-77-77</a></p>
-                <p><a href="mailto:info@example.com">info@example.com</a></p>
-                <p>м. Полтава, вул. Прикладна, 10</p>
+                <p><a href="tel:+380800331992">+38 (0 800) 33 1992</a></p>
+                <p><a href="mailto:solokovanatalia@gmail.com">solokovanatalia@gmail.com</a></p>
+                <p>м. Київ Оболонська набережна 3, корпус 3</p>
             </div>
         </div>
         <div class="footer-bottom">
