--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -51,7 +51,7 @@ body{
     color:var(--text);
     font-weight:700;
 }
-.logo img{height:40px;width:40px;object-fit:contain}
+.logo img{height:50px;width:50px;object-fit:contain}
 .main-nav{display:flex;gap:18px;align-items:center}
 .main-nav a{text-decoration:none;color:var(--muted);padding:8px 10px;border-radius:8px}
 .main-nav a:hover{color:var(--text);background:rgba(14,165,233,0.06)}
@@ -66,6 +66,12 @@ body{
     text-decoration: none;
     cursor: pointer;
 }
+a {
+    all: unset;
+    text-decoration: none;
+    color: inherit;
+}
+
 
 /* Головна кнопка (блакитна) */
 .btn-primary {
@@ -239,8 +245,8 @@ body{
 }
 
 .footer-col .logo img {
-    height: 40px;
-    width: 40px;
+    height: 50px;
+    width: 50px;
     object-fit: contain;
     border-radius: 6px;
 }
