--- a/templates/team.html
+++ b/templates/team.html
@@ -37,14 +37,14 @@
 
     <section class="team-grid">
         <article class="doctor-card">
-            <img src="{{ url_for('static', filename='assets/doctor1.jpg') }}" alt="Остапенко Олексій Дмитрович">
-            <h4>Остапенко Олексій Дмитрович</h4>
-            <p class="position">Лікар-стоматолог, хірург</p>
+            <img src="{{ url_for('static', filename='assets/doctor4.jpg') }}" alt="Доктор 4">
+            <h4>Щолокова Наталія Вікторівна</h4>
+            <p class="position">Головний лікар</p>
         </article>
         <article class="doctor-card">
             <img src="{{ url_for('static', filename='assets/doctor2.jpg') }}" alt="Мельник Іван Миколайович">
             <h4>Мельник Іван Миколайович</h4>
-            <p class="position">Стоматолог-хірург</p>
+            <p class="position">Помічник</p>
         </article>
         <article class="doctor-card">
             <img src="{{ url_for('static', filename='assets/doctor3.jpg') }}" alt="Негреба Наталія Іванівна">
@@ -52,9 +52,9 @@
             <p class="position">Лікар-стоматолог-терапевт</p>
         </article>
         <article class="doctor-card">
-            <img src="{{ url_for('static', filename='assets/doctor4.jpg') }}" alt="Галина Собакар Iванiвна">
-            <h4>Галина Собакар Iванiвна</h4>
-            <p class="position">Імплантолог</p>
+            <img src="{{ url_for('static', filename='assets/doctor1.jpg') }}" alt="Остапенко Олексій Дмитрович">
+            <h4>Остапенко Олексій Дмитрович</h4>
+            <p class="position">Лікар-стоматолог, хірург</p>
         </article>
     </section>
 
@@ -115,6 +115,7 @@
         </div>
     </div>
 </footer>
+    <script src="{{ url_for('static', filename='js/mobileopen.js') }}"></script>
     <script src="{{url_for('static', filename='js/zapis.js')}}"></script>
 </body>
 </html>
