--- a/templates/treatment.html
+++ b/templates/treatment.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/treatment.css') }}">
     <link rel="icon" type="image/png" href="{{ url_for('static', filename='logo.png') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/mobile.css') }}">
 </head>
 <body>
     <header class="site-header">
@@ -94,13 +95,6 @@
         </div>
     </footer>
 
-    <script>
-    const toggle = document.getElementById('mobileToggle');
-    const nav = document.getElementById('mainNav');
-    toggle.addEventListener('click', () => {
-        nav.classList.toggle('open');
-        toggle.classList.toggle('open');
-    });
-    </script>
+    <script src="{{ url_for('static', filename='js/mobileopen.js') }}"></script>
 </body>
 </html>
